# FlowGraphLib

./: .gitignore  .replit  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Pasted-Here-s-a-requirements-document-for-the-C-20-flowgraph-library-design-C-20-Flowgraph-1730602969936.txt  Pasted-Here-s-an-updated-requirements-specification-for-the-flowgraph-library-incorporating-the-expansiv-1730603924875.txt  README.md
.github/workflows/: ci.yml  wasm.yml
docs/: dependency_strategy.md
examples/: basic_usage.cpp  graph_optimization.cpp  image_pipeline.cpp  matrix_operations.cpp  neural_network.cpp  signal_processing.cpp
include/flowgraph/async/: future_helpers.hpp  task.hpp  thread_pool.hpp
include/flowgraph/cache/: cache_policy.hpp  fractal_cache_policy.hpp  graph_cache.hpp  node_cache.hpp
include/flowgraph/core/: base.hpp  compute_result.hpp  concepts.hpp  core.hpp  edge.hpp  error_state.hpp  forward_decl.hpp  fractal_tree_node.hpp  graph.hpp  interfaces.hpp  node.hpp  optimization_base.hpp  pch.hpp  templates.hpp
include/flowgraph/core/impl/: compute_result_impl.hpp  node_impl.hpp
include/flowgraph/optimization/: compression_optimization.hpp  dead_node_elimination.hpp  fused_node.hpp  node_fusion.hpp  optimization_pass.hpp  precision_optimization.hpp
include/flowgraph/serialization/: serialization.hpp
python/: arithmetic_node.hpp  example.py  flowgraph.hpp  flowgraph_module.cpp  test_flowgraph.py
src/: flowgraph.cpp
tests/: CMakeLists.txt  error_propagation_test.cpp  fractal_tree_benchmark.cpp  fractal_tree_test.cpp  main.cpp  precision_management_test.cpp
wasm/: flowgraph.hpp  shell.html
